# silksong_announcer

./: output.json  pyproject.toml
silksong_announcer/: __main__.py
